Buiding main page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body class="blood">
 
   <div class="container">
     <header class="header">
@@ -48,12 +48,24 @@
           Том Харди в образе обаятельного суперзлодея из комиксов Marvel.
         </p>
       </div>
-      <!-- /.hero__title -->
+      <!-- /.movie__title -->
+      <div class="button__group">
+        <button class="button button__primary">
+          <img class="button__icon" src="images/play.svg" alt="icon: play" width="15px" height="15px">
+          <span class="button__text">смотреть трейлер</span>
+        </button>
+        <a href="trailer.html" class="button button__link">
+          <img class="button__icon" src="images/ticket.svg" alt="icon: ticket" width="15px" height="15px">
+          <span class="button__text">билеты на премьеру</span>
+        </a>
+      </div>
+      <!-- /.button__group -->
     </div>
-    <!-- /.hero -->
+    <!-- /.movie -->
   </div>
   <!-- /.container -->
 
+  <img class="venom" src="images/venom.png" alt="photo: venom">
 </body>
 
 </html>
