--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Venom 2. Главная страница</title>
+  <link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+  <link rel="manifest" href="favicon/site.webmanifest">
+  <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#000000">
+  <meta name="msapplication-TileColor" content="#000000">
+  <meta name="theme-color" content="#000000">
+  <link rel="stylesheet" href="css/jquery.fancybox.min.css" />
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -76,9 +84,57 @@
   <!-- /.container -->
 
   <img class="venom" src="images/venom.png" alt="photo: venom">
+
+  <!--+++++++++++++++++ The widget-consultant +++++++++++++++++-->
+
+  <div class="hide-form">
+    <button class="order-trigger">
+      — И куда едем?
+    </button>
+    <div class="order-ticket">
+      <form class="order-ticket__form">
+        <fieldset class="order-ticket__form-wrapper">
+          <legend class="order-ticket__title">Заполните форму</legend>
+          <small class="order-ticket__description">И получите на почту расписание ближайших сеансов в вашем городе и
+            возможные акции</small>
+          <label class="order-ticket__label">
+            <input class="order-ticket__input" type="text" required name="name">
+            <span class="order-ticket__label-text">Имя</span>
+          </label>
+          <label class="order-ticket__label">
+            <input class="order-ticket__input" type="text" name="surname">
+            <span class="order-ticket__label-text">Фамилия</span>
+          </label>
+          <label class="order-ticket__label">
+            <input class="order-ticket__input" type="text" required name="city">
+            <span class="order-ticket__label-text">Город</span>
+          </label>
+          <label class="order-ticket__label">
+            <input class="order-ticket__input" type="email" required name="mail">
+            <span class="order-ticket__label-text">e-mail</span>
+          </label>
+          <label class="order-ticket__label">
+            <input class="order-ticket__checkbox" type="checkbox" required name="personal" value="agree">
+            <span class="order-ticket__label-checkbox-text">Я согласен на обработку моих <a href="#">персональных
+                данных</a></span>
+          </label>
+          <button>Отправить</button>
+        </fieldset>
+        <div class="order-ticket__preloader-wrapper">
+          <video loop muted autoplay playsinline src="images/6.mp4" type="video/mp4"></video>
+        </div>
+        <fieldset class="order-ticket__thanks-wrapper">
+          <legend>Спасибо <span class="order-ticket__thanks-name">-имя-</span></legend>
+          <p>Вам на почту в скором времени будет отправлено письмо с расписание сеансов в вашем городе</p>
+        </fieldset>
+      </form>
+    </div>
+  </div>
+
+  <!--++++++++++++++ End of the widget-consultant ++++++++++++++-->
+
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
-  <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
+  <script src="js/jquery.fancybox.min.js"></script>
 
   <script src="js/main.js"></script>
 </body>
