--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <div class="container">
     <header class="header">
-      <a href="/" class="logo__link">
+      <a href="/index.html" class="logo__link">
         <img class="logo__image" src="images/logo.png" alt="logo: Venom" width="46" height="71">
       </a>
       <nav class="nav">
@@ -39,19 +39,19 @@
         <!-- /.menu__close -->
         <ul class="nav__menu">
           <li class="nav__menu--item">
-            <a href="about.html" class="nav__menu--link">о фильме</a>
+            <a class="nav__menu--link" href="about.html">о фильме</a>
           </li>
 
           <li class="nav__menu--item">
-            <a href="trailer.html" class="nav__menu--link">трейлер</a>
+            <a class="nav__menu--link" data-fancybox href="https://www.youtube.com/watch?v=kOF4p_bCLJs">трейлер</a>
           </li>
 
           <li class="nav__menu--item">
-            <a href="actors.html" class="nav__menu--link">актеры</a>
+            <a class="nav__menu--link" href="actors.html">актеры</a>
           </li>
 
           <li class="nav__menu--item">
-            <a href="premiere.html" class="nav__menu--link">премьера</a>
+            <a class="nav__menu--link" href="premiere.html">премьера</a>
           </li>
         </ul>
         <!-- /.nav__menu -->
