--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </li>
 
           <li class="nav__menu--item">
-            <a class="nav__menu--link" data-fancybox href="https://www.youtube.com/watch?v=kOF4p_bCLJs">трейлер</a>
+            <a class="nav__menu--link" href="trailer.html">трейлер</a>
           </li>
 
           <li class="nav__menu--item">
