premier.html added. about.html and actors.html has been refactoring for better adaptive design

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 
   <div class="container">
     <header class="header">
-      <a href="/index.html" class="logo__link">
+      <a href="index.html" class="logo__link">
         <img class="logo__image" src="images/logo.png" alt="logo: Venom" width="46" height="71">
       </a>
       <nav class="nav">
@@ -55,20 +55,31 @@
         <p class="content__text">В настырном журналисте по-прежнему живет симбиот. Том Харди в образе обаятельного
           суперзлодея из комиксов Marvel.</p>
         <h3 class="content__subtitle">В главных ролях:</h3>
-        <ul class="list column-2">
-          <li class="list__item">Том Харди</li>
-          <li class="list__item">Мишель Уильямс</li>
-          <li class="list__item">Вуди Харрельсон</li>
-          <li class="list__item">Наоми Харрис</li>
-          <li class="list__item">Стивен Грэм</li>
-          <li class="list__item">Рейд Скотт</li>
-          <li class="list__item">Эд Кейр</li>
-          <li class="list__item">Шон Делани</li>
-          <li class="list__item">Уилльям Барбо</li>
-          <li class="list__item">Пегги Лу</li>
-        </ul>
-        <!-- /.list -->
-        <div class="trailer">
+        <div class="actors__main column-2">
+          <div class="actors__list">
+            <ul class="list">
+              <li class="list__item">Том Харди</li>
+              <li class="list__item">Мишель Уильямс</li>
+              <li class="list__item">Вуди Харрельсон</li>
+              <li class="list__item">Наоми Харрис</li>
+              <li class="list__item">Стивен Грэм</li>
+            </ul>
+          </div>
+          <!-- /.actors__list -->
+          <div class="actors__list">
+            <ul class="list">
+              <li class="list__item">Рейд Скотт</li>
+              <li class="list__item">Эд Кейр</li>
+              <li class="list__item">Шон Делани</li>
+              <li class="list__item">Уилльям Барбо</li>
+              <li class="list__item">Пегги Лу</li>
+            </ul>
+          </div>
+          <!-- /.actors__list -->
+        </div>
+        <!-- /.actors__main -->
+
+        <div class="content__trailer">
           <div class="play">
             <a data-fancybox href="https://www.youtube.com/watch?v=kOF4p_bCLJs">
               <img class="play__icon" src="images/play.svg" alt="icon: play">
