--- a/actors.html
+++ b/actors.html
@@ -14,7 +14,7 @@
 
   <div class="container">
     <header class="header actors__page--header">
-      <a href="/index.html" class="logo__link">
+      <a href="index.html" class="logo__link">
         <img class="logo__image" src="images/logo.png" alt="logo: Venom" width="46" height="71">
       </a>
       <nav class="nav">
@@ -55,187 +55,198 @@
         <p class="content__text">В настырном журналисте по-прежнему живет симбиот. Том Харди в образе обаятельного
           суперзлодея из комиксов Marvel.</p>
 
-        <div class="actors__subtitles">
-          <h3 class="content__subtitle actors__subtitle--first">В главных ролях:</h3>
-          <h3 class="content__subtitle actors__subtitle--second">Режиссер</h3>
-          <h3 class="content__subtitle actors__subtitle--third">Продюсеры</h3>
-        </div>
-
         <div class="actors">
-          <div class="actors__list">
-            <ul class="list">
-              <li class="list__item actor__about">
-                <img class="actor__foto" src="/images/actors/Tom_Hardy_240x240.webp" width="80" height="80"
-                  alt=" foto: Том Харди">
-                <div class="actor__info">Том Харди</div>
-              </li>
-              <li class="list__item actor__about">
-                <img class="actor__foto" src="/images/actors/Michelle_Williams_240x240.webp" width="80" height="80"
-                  alt="foto: Мишель Уильямс">
-                <div class="actor__info">Мишель Уильямс</div>
-              </li>
-              <li class="list__item actor__about">
-                <img class="actor__foto" src="/images/actors/Woody_Harrelson_240x240.webp" width="80" height="80"
-                  alt="foto: Вуди Харрельсон">
-                <div class="actor__info">Вуди Харрельсон</div>
-              </li>
-              <li class="list__item actor__about">
-                <img class="actor__foto" src="/images/actors/Naomie_Harris_240x240.webp" width="80" height="80"
-                  alt="foto: Наоми Харрис">
-                <div class="actor__info">Наоми Харрис</div>
-              </li>
-              <li class="list__item actor__about">
-                <img class="actor__foto" src="/images/actors/Stephen_Graham_240x240.webp" width="80" height="80"
-                  alt="foto: Стивен Грэм">
-                <div class="actor__info">Стивен Грэм</div>
-              </li>
-            </ul>
-            <!-- /.list -->
-          </div>
-          <!-- /.col -->
+          <div class="actors--left__section">
+            <h3 class="content__subtitle actors__subtitle--first">В главных ролях:</h3>
+            <div class="actors__main">
+              <div class="actors__list">
+                <ul class="list">
+                  <li class="list__item actor__about">
+                    <img class="actor__foto" src="/images/actors/Tom_Hardy_240x240.webp" width="80" height="80"
+                      alt=" foto: Том Харди">
+                    <div class="actor__info">Том Харди</div>
+                  </li>
+                  <li class="list__item actor__about">
+                    <img class="actor__foto" src="/images/actors/Michelle_Williams_240x240.webp" width="80" height="80"
+                      alt="foto: Мишель Уильямс">
+                    <div class="actor__info">Мишель Уильямс</div>
+                  </li>
+                  <li class="list__item actor__about">
+                    <img class="actor__foto" src="/images/actors/Woody_Harrelson_240x240.webp" width="80" height="80"
+                      alt="foto: Вуди Харрельсон">
+                    <div class="actor__info">Вуди Харрельсон</div>
+                  </li>
+                  <li class="list__item actor__about">
+                    <img class="actor__foto" src="/images/actors/Naomie_Harris_240x240.webp" width="80" height="80"
+                      alt="foto: Наоми Харрис">
+                    <div class="actor__info">Наоми Харрис</div>
+                  </li>
+                  <li class="list__item actor__about">
+                    <img class="actor__foto" src="/images/actors/Stephen_Graham_240x240.webp" width="80" height="80"
+                      alt="foto: Стивен Грэм">
+                    <div class="actor__info">Стивен Грэм</div>
+                  </li>
+                </ul>
+                <!-- /.list -->
+              </div>
+              <!-- /.actors__list -->
 
-          <div class="actors__list">
-            <ul class="list">
-              <li class="list__item actor__about">
-                <img class="actor__foto" src="/images/actors/Reid_Scott_240x240.webp" width="80" height="80"
-                  alt="foto: Рейд Скотт">
-                <div class="actor__info">Рейд Скотт</div>
-              </li>
-              <li class="list__item actor__about">
-                <img class="actor__foto" src="/images/actors/Ed_Kear_240x240.webp" width="80" height="80"
-                  alt="foto: Эд Кейр">
-                <div class="actor__info">Эд Кейр</div>
-              </li>
-              <li class="list__item actor__about">
-                <img class="actor__foto" src="/images/actors/Sean_Delaney_240x240.webp" width="80" height="80"
-                  alt="foto: Шон Делани">
-                <div class="actor__info">Шон Делани</div>
-              </li>
-              <li class="list__item actor__about">
-                <img class="actor__foto" src="/images/actors/William_W_Barbour_240x240.webp" width="80" height="80"
-                  alt="foto: Уилльям Барбо">
-                <div class="actor__info">Уилльям Барбо</div>
-              </li>
-              <li class="list__item actor__about">
-                <img class="actor__foto" src="/images/actors/Peggy_Lu_240x240.webp" width="80" height="80"
-                  alt="foto: Пегги Лу">
-                <div class="actor__info">Пегги Лу</div>
-              </li>
-            </ul>
-            <!-- /.list -->
+              <div class="actors__list">
+                <ul class="list">
+                  <li class="list__item actor__about">
+                    <img class="actor__foto" src="images/actors/Reid_Scott_240x240.webp" width="80" height="80"
+                      alt="foto: Рейд Скотт">
+                    <div class="actor__info">Рейд Скотт</div>
+                  </li>
+                  <li class="list__item actor__about">
+                    <img class="actor__foto" src="images/actors/Ed_Kear_240x240.webp" width="80" height="80"
+                      alt="foto: Эд Кейр">
+                    <div class="actor__info">Эд Кейр</div>
+                  </li>
+                  <li class="list__item actor__about">
+                    <img class="actor__foto" src="images/actors/Sean_Delaney_240x240.webp" width="80" height="80"
+                      alt="foto: Шон Делани">
+                    <div class="actor__info">Шон Делани</div>
+                  </li>
+                  <li class="list__item actor__about">
+                    <img class="actor__foto" src="images/actors/William_W_Barbour_240x240.webp" width="80" height="80"
+                      alt="foto: Уилльям Барбо">
+                    <div class="actor__info">Уилльям Барбо</div>
+                  </li>
+                  <li class="list__item actor__about">
+                    <img class="actor__foto" src="images/actors/Peggy_Lu_240x240.webp" width="80" height="80"
+                      alt="foto: Пегги Лу">
+                    <div class="actor__info">Пегги Лу</div>
+                  </li>
+                </ul>
+                <!-- /.list -->
+              </div>
+              <!-- /.actors__list -->
+            </div>
+            <!-- /.actors__main -->
           </div>
-          <!-- /.col -->
+          <!-- /.actors--left__section -->
 
-          <div class="actors__list">
-            <ul class="list">
-              <li class="list__item actor__about">
-                <img class="actor__foto" src="/images/actors/Andy_Serkis_240x240.webp" width="80" height="80"
-                  alt="foto: Энди Серкис">
-                <div class="actor__info">
-                  <p class="actor__name">Энди Серкис</p>
-                </div>
-              </li>
-              <h3 class="content__subtitle">Сценарий и сюжет</h3>
-              <li class="list__item actor__about">
-                <img class="actor__foto" src="/images/actors/Kelly_Marcel_240x240.webp" width="80" height="80"
-                  alt="foto: Келли Марсел">
-                <div class="actor__info">Келли Марсел</div>
-              </li>
-              <h3 class="content__subtitle">Сценарий и история</h3>
-              <li class="list__item actor__about">
-                <img class="actor__foto" src="/images/actors/Tom_Hardy_240x240.webp" width="80" height="80"
-                  alt="foto: Том Харди">
-                <div class="actor__info">Том Харди</div>
-              </li>
-            </ul>
-            <!-- /.list -->
-          </div>
-          <!-- /.col -->
+          <div class="actors--right__section">
+            <div class="actors__subtitles">
+              <h3 class="content__subtitle actors__subtitle--second">Режиссер</h3>
+              <h3 class="content__subtitle actors__subtitle--third">Продюсеры</h3>
+            </div>
+            <div class="actors__direction">
+              <div class="actors__list">
+                <ul class="list">
+                  <li class="list__item actor__about">
+                    <img class="actor__foto" src="images/actors/Andy_Serkis_240x240.webp" width="80" height="80"
+                      alt="foto: Энди Серкис">
+                    <div class="actor__info">
+                      <p class="actor__name">Энди Серкис</p>
+                    </div>
+                  </li>
+                  <h3 class="content__subtitle">Сценарий и сюжет</h3>
+                  <li class="list__item actor__about">
+                    <img class="actor__foto" src="images/actors/Kelly_Marcel_240x240.webp" width="80" height="80"
+                      alt="foto: Келли Марсел">
+                    <div class="actor__info">Келли Марсел</div>
+                  </li>
+                  <h3 class="content__subtitle">Сценарий и история</h3>
+                  <li class="list__item actor__about">
+                    <img class="actor__foto" src="images/actors/Tom_Hardy_240x240.webp" width="80" height="80"
+                      alt="foto: Том Харди">
+                    <div class="actor__info">Том Харди</div>
+                  </li>
+                </ul>
+                <!-- /.list -->
+              </div>
+              <!-- /.actors__list -->
 
-          <div class="col actors__list">
-            <ul class="list">
-              <li class="list__item actor__about">
-                <img class="actor__foto" src="/images/actors/Avi_Arad_240x240.webp" width="80" height="80"
-                  alt="foto: Ави Арад">
-                <div class="actor__info">
-                  <p class="actor__name">Ави Арад</p>
-                </div>
-              </li>
-              <li class="list__item actor__about">
-                <img class="actor__foto" src="/images/actors/Tom_Hardy_240x240.webp" width="80" height="80"
-                  alt="foto: Том Харди">
-                <div class="actor__info">Том Харди</div>
-              </li>
-              <li class="list__item actor__about">
-                <img class="actor__foto" src="/images/actors/Kelly_Marcel_240x240.webp" width="80" height="80"
-                  alt="foto: Келли Марсел">
-                <div class="actor__info">Келли Марсел</div>
-              </li>
-            </ul>
-            <!-- /.list -->
+              <div class="actors__list">
+                <ul class="list">
+                  <li class="list__item actor__about">
+                    <img class="actor__foto" src="images/actors/Avi_Arad_240x240.webp" width="80" height="80"
+                      alt="foto: Ави Арад">
+                    <div class="actor__info">
+                      <p class="actor__name">Ави Арад</p>
+                    </div>
+                  </li>
+                  <li class="list__item actor__about">
+                    <img class="actor__foto" src="images/actors/Tom_Hardy_240x240.webp" width="80" height="80"
+                      alt="foto: Том Харди">
+                    <div class="actor__info">Том Харди</div>
+                  </li>
+                  <li class="list__item actor__about">
+                    <img class="actor__foto" src="images/actors/Kelly_Marcel_240x240.webp" width="80" height="80"
+                      alt="foto: Келли Марсел">
+                    <div class="actor__info">Келли Марсел</div>
+                  </li>
+                </ul>
+                <!-- /.list -->
+              </div>
+              <!-- /.actors__list -->
+            </div>
+            <!-- /.actors__direction -->
           </div>
-          <!-- /.col -->
+          <!-- /.actors--right__section -->
         </div>
         <!-- /.actors -->
       </div>
-      <!-- /.content -->
-
+      <!-- /.col -->
     </div>
-    <!-- /.container -->
+    <!-- /.content -->
+  </div>
+  <!-- /.container -->
+  <!--+++++++++++++++++ The widget-consultant +++++++++++++++++-->
 
-    <!--+++++++++++++++++ The widget-consultant +++++++++++++++++-->
-
-    <div class="hide-form">
-      <button class="order-trigger">
-        — И куда едем?
-      </button>
-      <div class="order-ticket">
-        <form class="order-ticket__form">
-          <fieldset class="order-ticket__form-wrapper">
-            <legend class="order-ticket__title">Заполните форму</legend>
-            <small class="order-ticket__description">И получите на почту расписание ближайших сеансов в вашем городе и
-              возможные акции</small>
-            <label class="order-ticket__label">
-              <input class="order-ticket__input" type="text" required name="name">
-              <span class="order-ticket__label-text">Имя</span>
-            </label>
-            <label class="order-ticket__label">
-              <input class="order-ticket__input" type="text" name="surname">
-              <span class="order-ticket__label-text">Фамилия</span>
-            </label>
-            <label class="order-ticket__label">
-              <input class="order-ticket__input" type="text" required name="city">
-              <span class="order-ticket__label-text">Город</span>
-            </label>
-            <label class="order-ticket__label">
-              <input class="order-ticket__input" type="email" required name="mail">
-              <span class="order-ticket__label-text">e-mail</span>
-            </label>
-            <label class="order-ticket__label">
-              <input class="order-ticket__checkbox" type="checkbox" required name="personal" value="agree">
-              <span class="order-ticket__label-checkbox-text">Я согласен на обработку моих <a href="#">персональных
-                  данных</a></span>
-            </label>
-            <button>Отправить</button>
-          </fieldset>
-          <div class="order-ticket__preloader-wrapper">
-            <video loop muted autoplay playsinline src="images/6.mp4" type="video/mp4"></video>
-          </div>
-          <fieldset class="order-ticket__thanks-wrapper">
-            <legend>Спасибо <span class="order-ticket__thanks-name">-имя-</span></legend>
-            <p>Вам на почту в скором времени будет отправлено письмо с расписание сеансов в вашем городе</p>
-          </fieldset>
-        </form>
-      </div>
+  <div class="hide-form">
+    <button class="order-trigger">
+      — И куда едем?
+    </button>
+    <div class="order-ticket">
+      <form class="order-ticket__form">
+        <fieldset class="order-ticket__form-wrapper">
+          <legend class="order-ticket__title">Заполните форму</legend>
+          <small class="order-ticket__description">И получите на почту расписание ближайших сеансов в вашем городе и
+            возможные акции</small>
+          <label class="order-ticket__label">
+            <input class="order-ticket__input" type="text" required name="name">
+            <span class="order-ticket__label-text">Имя</span>
+          </label>
+          <label class="order-ticket__label">
+            <input class="order-ticket__input" type="text" name="surname">
+            <span class="order-ticket__label-text">Фамилия</span>
+          </label>
+          <label class="order-ticket__label">
+            <input class="order-ticket__input" type="text" required name="city">
+            <span class="order-ticket__label-text">Город</span>
+          </label>
+          <label class="order-ticket__label">
+            <input class="order-ticket__input" type="email" required name="mail">
+            <span class="order-ticket__label-text">e-mail</span>
+          </label>
+          <label class="order-ticket__label">
+            <input class="order-ticket__checkbox" type="checkbox" required name="personal" value="agree">
+            <span class="order-ticket__label-checkbox-text">Я согласен на обработку моих <a href="#">персональных
+                данных</a></span>
+          </label>
+          <button>Отправить</button>
+        </fieldset>
+        <div class="order-ticket__preloader-wrapper">
+          <video loop muted autoplay playsinline src="images/6.mp4" type="video/mp4"></video>
+        </div>
+        <fieldset class="order-ticket__thanks-wrapper">
+          <legend>Спасибо <span class="order-ticket__thanks-name">-имя-</span></legend>
+          <p>Вам на почту в скором времени будет отправлено письмо с расписание сеансов в вашем городе</p>
+        </fieldset>
+      </form>
     </div>
+  </div>
 
-    <!--++++++++++++++ End of the widget-consultant ++++++++++++++-->
+  <!--++++++++++++++ End of the widget-consultant ++++++++++++++-->
 
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
-    <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
+  <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
 
-    <script src="js/main.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
