--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <div class="container">
     <header class="header">
-      <a href="/index.html" class="logo__link">
+      <a href="index.html" class="logo__link">
         <img class="logo__image" src="images/logo.png" alt="logo: Venom" width="46" height="71">
       </a>
       <nav class="nav">
