--- a/actors.html
+++ b/actors.html
@@ -62,27 +62,27 @@
               <div class="actors__list">
                 <ul class="list">
                   <li class="list__item actor__about">
-                    <img class="actor__foto" src="/images/actors/Tom_Hardy_240x240.webp" width="80" height="80"
+                    <img class="actor__foto" src="images/actors/Tom_Hardy_240x240.webp" width="80" height="80"
                       alt=" foto: Том Харди">
                     <div class="actor__info">Том Харди</div>
                   </li>
                   <li class="list__item actor__about">
-                    <img class="actor__foto" src="/images/actors/Michelle_Williams_240x240.webp" width="80" height="80"
+                    <img class="actor__foto" src="images/actors/Michelle_Williams_240x240.webp" width="80" height="80"
                       alt="foto: Мишель Уильямс">
                     <div class="actor__info">Мишель Уильямс</div>
                   </li>
                   <li class="list__item actor__about">
-                    <img class="actor__foto" src="/images/actors/Woody_Harrelson_240x240.webp" width="80" height="80"
+                    <img class="actor__foto" src="images/actors/Woody_Harrelson_240x240.webp" width="80" height="80"
                       alt="foto: Вуди Харрельсон">
                     <div class="actor__info">Вуди Харрельсон</div>
                   </li>
                   <li class="list__item actor__about">
-                    <img class="actor__foto" src="/images/actors/Naomie_Harris_240x240.webp" width="80" height="80"
+                    <img class="actor__foto" src="images/actors/Naomie_Harris_240x240.webp" width="80" height="80"
                       alt="foto: Наоми Харрис">
                     <div class="actor__info">Наоми Харрис</div>
                   </li>
                   <li class="list__item actor__about">
-                    <img class="actor__foto" src="/images/actors/Stephen_Graham_240x240.webp" width="80" height="80"
+                    <img class="actor__foto" src="images/actors/Stephen_Graham_240x240.webp" width="80" height="80"
                       alt="foto: Стивен Грэм">
                     <div class="actor__info">Стивен Грэм</div>
                   </li>
@@ -194,59 +194,12 @@
     <!-- /.content -->
   </div>
   <!-- /.container -->
-  <!--+++++++++++++++++ The widget-consultant +++++++++++++++++-->
-
-  <div class="hide-form">
-    <button class="order-trigger">
-      — И куда едем?
-    </button>
-    <div class="order-ticket">
-      <form class="order-ticket__form">
-        <fieldset class="order-ticket__form-wrapper">
-          <legend class="order-ticket__title">Заполните форму</legend>
-          <small class="order-ticket__description">И получите на почту расписание ближайших сеансов в вашем городе и
-            возможные акции</small>
-          <label class="order-ticket__label">
-            <input class="order-ticket__input" type="text" required name="name">
-            <span class="order-ticket__label-text">Имя</span>
-          </label>
-          <label class="order-ticket__label">
-            <input class="order-ticket__input" type="text" name="surname">
-            <span class="order-ticket__label-text">Фамилия</span>
-          </label>
-          <label class="order-ticket__label">
-            <input class="order-ticket__input" type="text" required name="city">
-            <span class="order-ticket__label-text">Город</span>
-          </label>
-          <label class="order-ticket__label">
-            <input class="order-ticket__input" type="email" required name="mail">
-            <span class="order-ticket__label-text">e-mail</span>
-          </label>
-          <label class="order-ticket__label">
-            <input class="order-ticket__checkbox" type="checkbox" required name="personal" value="agree">
-            <span class="order-ticket__label-checkbox-text">Я согласен на обработку моих <a href="#">персональных
-                данных</a></span>
-          </label>
-          <button>Отправить</button>
-        </fieldset>
-        <div class="order-ticket__preloader-wrapper">
-          <video loop muted autoplay playsinline src="images/6.mp4" type="video/mp4"></video>
-        </div>
-        <fieldset class="order-ticket__thanks-wrapper">
-          <legend>Спасибо <span class="order-ticket__thanks-name">-имя-</span></legend>
-          <p>Вам на почту в скором времени будет отправлено письмо с расписание сеансов в вашем городе</p>
-        </fieldset>
-      </form>
-    </div>
-  </div>
-
-  <!--++++++++++++++ End of the widget-consultant ++++++++++++++-->
 
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
   <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
 
-  <script src="js/main.js"></script>
+  <script src="js/main.js" type="module"></script>
 </body>
 
 </html>
